# mopro-refactor

./: Cargo.toml  README.md
.github/workflows/: add-to-project.yml
cli/: Cargo.toml
cli/src/: main.rs
mopro-ffi/: Cargo.toml
mopro-ffi/src/: lib.rs
mopro-ffi/src/bindings/: android.rs  constants.rs  flutter.rs  ios.rs  mod.rs  react-native.rs  web.rs
test-e2e/: .gitignore  Cargo.toml  build.rs
test-e2e/src/: circom.rs  halo2.rs  lib.rs  noir.rs
