[package]
name = "test-e2e"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ios"
path = "bin/ios.rs"

[[bin]]
name = "web"
path = "bin/web.rs"

[[bin]]
name = "android"
path = "bin/android.rs"

[[bin]]
name = "flutter"
path = "bin/flutter.rs"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
mopro-ffi = { path = "../mopro-ffi", features = ["flutter"] }
