[package]
name = "test-e2e"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ios"
path = "bin/ios.rs"

[[bin]]
name = "web"
path = "bin/web.rs"

[[bin]]
name = "android"
path = "bin/android.rs"

[[bin]]
name = "flutter"
path = "bin/flutter.rs"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
mopro-ffi = { path = "../mopro-ffi", features = ["flutter"] }
circom-prover = { git = "https://github.com/zkmopro/mopro" }
rust-witness = "0.1"
serde_json = "1.0.143"
num-bigint = "0.4.6"
lazy_static = "1.5.0"
anyhow = "1.0.99"
plonk-fibonacci = { package = "plonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }

[build-dependencies]
rust-witness = "0.1"
