[package]
name = "test-e2e"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ios"
path = "bin/ios.rs"

[[bin]]
name = "web"
path = "bin/web.rs"

[[bin]]
name = "android"
path = "bin/android.rs"

[[bin]]
name = "flutter"
path = "bin/flutter.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["circom", "halo2", "noir"]
halo2 = ["dep:plonk-fibonacci", "dep:anyhow"]
circom = [
    "dep:circom-prover",
    "dep:rust-witness",
    "dep:serde_json",
    "dep:num-bigint",
    "dep:lazy_static",
]
noir = ["dep:noir_rs", "dep:serde_json", "dep:anyhow"]

[dependencies]
mopro-ffi = { path = "../mopro-ffi", features = ["flutter"] }
# circom deps
circom-prover = { git = "https://github.com/zkmopro/mopro", optional = true }
rust-witness = { version = "0.1", optional = true }
serde_json = { version = "1.0.143", optional = true }
num-bigint = { version = "0.4.6", optional = true }
lazy_static = { version = "1.4.0", optional = true }

# halo2 deps
anyhow = { version = "1.0.99", optional = true }
plonk-fibonacci = { package = "plonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git", optional = true }

# noir deps
noir_rs = { package = "noir", git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
    # "android-compat",
], branch = "v1.0.0-beta.8-3", optional = true }

[build-dependencies]
# circom deps
rust-witness = { version = "0.1", optional = true }

[dev-dependencies]
# noir deps
serial_test = "3.0.0"
